# docs/swagger.yaml
@@ -131,6 +131,32 @@ paths:
       tags:
       - todos
   /todos/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: delete to-do by id
+      parameters:
+      - description: Todos id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: Success
+        "400":
+          description: Error
+          schema:
+            $ref: '#/definitions/responseApi.Response'
+        "500":
+          description: Error
+          schema:
+            $ref: '#/definitions/responseApi.Response'
+      summary: Delete To-do by id
+      tags:
+      - todos
     get:
       consumes:
       - application/json
